--- a/css/styles.css
+++ b/css/styles.css
@@ -498,10 +498,6 @@ button {
   display: block;
 }
 
-.footer-form {
-  display: flex;
-  flex-direction: column;
-}
 
 .footer-form-action {
   display: flex;
@@ -514,7 +510,6 @@ button {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #fff;
-  width: 100%;
   margin-bottom: 16px;
 }
 
@@ -525,12 +520,31 @@ button {
 }
 
 .footer-input {
+  border: none;
   border: 1px solid #fff;
   border-radius: 4px;
   width: 264px;
   height: 40px;
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
-  padding: 8px 16px;
+  padding-left: 16px;
+  background-color: transparent;
+}
+
+.footer-input::placeholder {
+  border: none;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 2;
+  letter-spacing: 0.04em;
+  color: #fff;
+
+}
+
+.footer-input:focus {
+  border: none;
+  color: #fff;
+  border: 1px solid #31d0aa;
+  outline: none;
 }
 
 .footer-form-btn {
@@ -552,6 +566,12 @@ button {
   background-color: #4d5ae5;
   border: none;
   cursor: pointer;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer-form-btn:focus,
+.footer-form-btn:hover {
+  background-color: #31d0aa;
 }
 
 .footer-form-icon {
