--- a/css/styles.css
+++ b/css/styles.css
@@ -592,9 +592,9 @@ button {
   z-index: 1000;
   background-color: rgba(46, 47, 66, 0.4);
 
-  opacity: 0;
+  /* opacity: 0;
   pointer-events: none;
-
+*/
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -608,11 +608,23 @@ button {
   background-color: #fcfcfc;
   max-width: 408px;
   border-radius: 4px;
-  padding: 24px;
+  padding: 72px 24px 24px;
   display: flex;
   flex-direction: column;
   max-height: 90%;
   overflow-y: auto;
+}
+
+.modal-btn-close {
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  background-color: #e7e9fc;
+}
+
+.modal-close-icon {
+  fill: #2e2f42;
 }
 
 .modal-form {
