--- a/css/styles.css
+++ b/css/styles.css
@@ -453,7 +453,7 @@ button {
 
 .footer-social {
   max-width: 208px;
-  margin-right: 80px;
+
 }
 
 .footer-social-title {
@@ -499,9 +499,10 @@ button {
 }
 
 
-.footer-form-action {
+.footer-form {
   display: flex;
   flex-direction: column;
+  margin-left: auto;
 }
 
 .footer-label {
@@ -592,14 +593,17 @@ button {
   z-index: 1000;
   background-color: rgba(46, 47, 66, 0.4);
 
-  /* opacity: 0;
+  opacity: 0;
+  visibility: hidden;
   pointer-events: none;
-*/
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-overlay.is-open {
   opacity: 1;
+  visibility: visible;
   pointer-events: auto;
 }
 
@@ -607,7 +611,7 @@ button {
   box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12), 0 2px 1px 0 rgba(0, 0, 0, 0.2);
   background-color: #fcfcfc;
   max-width: 408px;
-  max-height: 584px;
+  min-height: 584px;
   border-radius: 4px;
   padding: 72px 24px 24px;
   display: flex;
@@ -653,17 +657,45 @@ button {
   flex-direction: column;
 }
 
-.modal-user {
-  display: flex;
-  flex-direction: column;
+.modal-label {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.16667;
+  letter-spacing: 0.04em;
+  color: #8e8f99;
   margin-bottom: 4px;
+}
+
+.modal-user {
+  position: relative;
+  margin-bottom: 4px;
+
+}
+
+.user-icon {
+  position: absolute;
+  top: 11px;
+  left: 16px;
+  fill: #2e2f42;
 }
 
 .modal-input {
   border: 1px solid rgba(46, 47, 66, 0.4);
   border-radius: 4px;
-  width: 360px;
+  width: 100%;
   height: 40px;
+  margin-bottom: 8px;
+  padding-left: 38px;
+  background-color: transparent;
+  outline: none;
+}
+
+.modal-user:focus-within .modal-input {
+  border-color: #4d5ae5;
+}
+
+.modal-user:focus-within .user-icon {
+  fill: #4d5ae5;
 }
 
 .modal-btn {
