--- a/css/styles.css
+++ b/css/styles.css
@@ -674,9 +674,10 @@ button {
 
 .user-icon {
   position: absolute;
-  top: 11px;
+  top: 8px;
   left: 16px;
   fill: #2e2f42;
+
 }
 
 .modal-input {
@@ -698,12 +699,34 @@ button {
   fill: #4d5ae5;
 }
 
+.modal-textarea {
+  width: 100%;
+  height: 120px;
+  resize: none;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 4px;
+  padding: 8px 16px;
+  background-color: transparent;
+  outline: none;
+}
+
+.modal-textarea::placeholder {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.16667;
+  letter-spacing: 0.04em;
+  color: rgba(46, 47, 66, 0.4);
+}
+
+.conditions-link {
+  text-decoration: underline;
+}
+
 .modal-btn {
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
-  background: #4d5ae5;
+  background-color: #4d5ae5;
   border-radius: 4px;
   padding: 16px 32px;
-  font-family: "Roboto", sans-serif;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
@@ -712,4 +735,16 @@ button {
   color: #fff;
   border: none;
   width: 169px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  text-decoration: none;
+  margin: 0 auto;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-btn:hover,
+.modal-btn:focus {
+  background-color: #404bbf;
 }
