--- a/css/styles.css
+++ b/css/styles.css
@@ -43,8 +43,8 @@ img {
 }
 
 button {
-  font-family: inherit;
-  color: currentColor;
+  cursor: pointer;
+  border: none;
 }
 
 /*HEADER*/
@@ -708,6 +708,7 @@ button {
   padding: 8px 16px;
   background-color: transparent;
   outline: none;
+  margin-bottom: 16px;
 }
 
 .modal-textarea::placeholder {
@@ -718,8 +719,42 @@ button {
   color: rgba(46, 47, 66, 0.4);
 }
 
+.modal-checkbox {
+  margin-bottom: 24px;
+}
+
+.modal-checkbox-label {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.16667;
+  letter-spacing: 0.04em;
+  color: #8e8f99;
+}
+
 .conditions-link {
+  line-height: 1.33333;
   text-decoration: underline;
+  text-decoration-skip-ink: none;
+  color: #4d5ae5;
+}
+
+.modal-checkbox-span {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  width: 16px;
+  height: 16px;
+  border-radius: 2px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  fill: transparent;
+  margin-right: 8px;
+}
+
+.modal-checkbox-input:checked+.modal-checkbox-label>.modal-checkbox-span {
+  border-radius: 2px;
+  fill: #fff;
+  border: 1px solid #404bbf;
+  background-color: #404bbf;
 }
 
 .modal-btn {
@@ -733,13 +768,13 @@ button {
   letter-spacing: 0.04em;
   text-align: center;
   color: #fff;
-  border: none;
+
   width: 169px;
   display: flex;
   justify-content: center;
   align-items: center;
-  cursor: pointer;
-  text-decoration: none;
+
+
   margin: 0 auto;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
