--- a/css/styles.css
+++ b/css/styles.css
@@ -529,6 +529,7 @@ button {
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
   padding-left: 16px;
   background-color: transparent;
+  color: #fff;
 }
 
 .footer-input::placeholder {
@@ -578,7 +579,8 @@ button {
 .footer-form-icon {
   fill: #fff;
   display: inline-block;
-
+  width: 24px;
+  height: 24px;
 }
 
 .modal-overlay {
@@ -636,10 +638,25 @@ button {
   position: absolute;
   top: 24px;
   right: 24px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-btn-close:hover,
+.modal-btn-close:focus {
+  background-color: #404bbf;
+  border: none;
 }
 
 .modal-close-icon {
+  width: 8px;
+  height: 8px;
   fill: #2e2f42;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-btn-close:hover .modal-close-icon,
+.modal-btn-close:focus .modal-close-icon {
+  fill: #fff;
 }
 
 .modal-text {
@@ -677,7 +694,8 @@ button {
   top: 8px;
   left: 16px;
   fill: #2e2f42;
-
+  width: 18px;
+  height: 24px;
 }
 
 .modal-input {
@@ -689,6 +707,7 @@ button {
   padding-left: 38px;
   background-color: transparent;
   outline: none;
+  color: #2e2f42;
 }
 
 .modal-user:focus-within .modal-input {
@@ -709,6 +728,7 @@ button {
   background-color: transparent;
   outline: none;
   margin-bottom: 16px;
+  color: #2e2f42;
 }
 
 .modal-textarea::placeholder {
@@ -752,8 +772,8 @@ button {
 
 .modal-checkbox-input:checked+.modal-checkbox-label>.modal-checkbox-span {
   border-radius: 2px;
-  fill: #fff;
-  border: 1px solid #404bbf;
+  fill: #f4f4fd;
+  border: none;
   background-color: #404bbf;
 }
 
