--- a/css/styles.css
+++ b/css/styles.css
@@ -505,7 +505,7 @@ button {
   margin-left: auto;
 }
 
-.footer-label {
+.footer-title {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
@@ -530,23 +530,25 @@ button {
   padding-left: 16px;
   background-color: transparent;
   color: #fff;
-}
-
-.footer-input::placeholder {
-  border: none;
   font-weight: 400;
   font-size: 12px;
   line-height: 2;
   letter-spacing: 0.04em;
-  color: #fff;
-
+  outline: none;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.footer-input:focus {
-  border: none;
+.footer-input::placeholder {
   color: #fff;
-  border: 1px solid #31d0aa;
-  outline: none;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 2;
+  letter-spacing: 0.04em;
+}
+
+.footer-input:focus,
+.footer-input:hover {
+  border-color: #31d0aa;
 }
 
 .footer-form-btn {
@@ -696,6 +698,8 @@ button {
   fill: #2e2f42;
   width: 18px;
   height: 24px;
+
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-input {
@@ -708,6 +712,8 @@ button {
   background-color: transparent;
   outline: none;
   color: #2e2f42;
+
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-user:focus-within .modal-input {
@@ -729,6 +735,8 @@ button {
   outline: none;
   margin-bottom: 16px;
   color: #2e2f42;
+
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-textarea::placeholder {
@@ -737,6 +745,10 @@ button {
   line-height: 1.16667;
   letter-spacing: 0.04em;
   color: rgba(46, 47, 66, 0.4);
+}
+
+.modal-textarea:focus {
+  border-color: #4d5ae5;
 }
 
 .modal-checkbox {
@@ -766,15 +778,28 @@ button {
   height: 16px;
   border-radius: 2px;
   border: 1px solid rgba(46, 47, 66, 0.4);
-  fill: transparent;
+  background-color: transparent;
   margin-right: 8px;
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-checkbox-icon {
+  opacity: 0;
+
+  fill: #f4f4fd;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-checkbox-input:checked+.modal-checkbox-label>.modal-checkbox-span {
-  border-radius: 2px;
-  fill: #f4f4fd;
-  border: none;
+
   background-color: #404bbf;
+  border-color: #404bbf;
+}
+
+.modal-checkbox-input:checked+.modal-checkbox-label>.modal-checkbox-span .modal-checkbox-icon {
+  opacity: 1;
 }
 
 .modal-btn {
