--- a/css/styles.css
+++ b/css/styles.css
@@ -687,14 +687,15 @@ button {
 
 .modal-user {
   position: relative;
-  margin-bottom: 4px;
+  margin-bottom: 8px;
 
 }
 
 .user-icon {
   position: absolute;
-  top: 8px;
+  top: 50%;
   left: 16px;
+  transform: translateY(-50%);
   fill: #2e2f42;
   width: 18px;
   height: 24px;
@@ -707,11 +708,12 @@ button {
   border-radius: 4px;
   width: 100%;
   height: 40px;
-  margin-bottom: 8px;
+  padding: 0;
   padding-left: 38px;
   background-color: transparent;
   outline: none;
   color: #2e2f42;
+
 
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
